--- a/main.html
+++ b/main.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Basic News Webpage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Header -->
+    <header class="header">
+        <h1>Daily Bulletin</h1>
+    </header>
+
+    <!-- Latest News Section -->
+    <div class="latest-news-section">
+        <h2>Latest News</h2>
+        <ul>
+            <li>India celebrates Independence Day with grandeur.</li>
+            <li>ISRO announces new lunar mission for 2026.</li>
+            <li>Stock markets see record highs this quarter.</li>
+        </ul>
+    </div>
+
+    <!-- Pictorial News Section -->
+    <div class="pictorial-news-section">
+        <h2>Pictorial News</h2>
+        <div class="images">
+            <img src="image_one.jpg" alt="News image one">
+            <img src="image_two.jpg" alt="News image two">
+            <img src="image_three.jpg" alt="News image three">
+        </div>
+    </div>
 
 </body>
-
 </html>
+
