--- a/main.html
+++ b/main.html
@@ -2,35 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic News Webpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Favorite Holiday Destination</title>
 </head>
 <body>
 
-    <!-- Header -->
-    <header class="header">
-        <h1>Daily Bulletin</h1>
-    </header>
+    <h1>Kyoto, Japan</h1>
+    <br>
 
-    <!-- Latest News Section -->
-    <div class="latest-news-section">
-        <h2>Latest News</h2>
-        <ul>
-            <li>India celebrates Independence Day with grandeur.</li>
-            <li>ISRO announces new lunar mission for 2026.</li>
-            <li>Stock markets see record highs this quarter.</li>
-        </ul>
-    </div>
+    <p>Kyoto, once the capital of Japan, is a beautiful city rich in cultural heritage, stunning temples, traditional tea houses, and serene gardens. It offers a unique blend of ancient traditions and modern experiences.</p>
 
-    <!-- Pictorial News Section -->
-    <div class="pictorial-news-section">
-        <h2>Pictorial News</h2>
-        <div class="images">
-            <img src="image_one.jpg" alt="News image one">
-            <img src="image_two.jpg" alt="News image two">
-            <img src="image_three.jpg" alt="News image three">
-        </div>
-    </div>
+    <h2>Top 5 Attractions</h2>
+    <ol>
+        <li><strong>Kinkaku-ji</strong> (Golden Pavilion) – A stunning Zen temple covered in <em>gold leaf</em>.</li>
+        <li><em>Fushimi Inari Taisha</em> – Famous for its thousands of bright <strong>red torii gates</strong>.</li>
+        <li><strong>Arashiyama Bamboo Grove</strong> – Walk through towering <em>bamboo stalks</em> in this magical forest.</li>
+        <li><em>Gion District</em> – Explore Kyoto’s famous <strong>geisha culture</strong> and tea houses.</li>
+        <li><strong>Kiyomizu-dera</strong> – A historic temple offering <em>panoramic city views</em>.</li>
+    </ol>
+
+    <h2>Must-Try Foods</h2>
+    <ul>
+        <li><strong>Kaiseki</strong> – A traditional multi-course meal that is both <em>delicious and artistic</em>.</li>
+        <li><em>Yudofu</em> – A hot tofu dish often served in <strong>Zen temples</strong>.</li>
+        <li><strong>Matcha Sweets</strong> – Green tea flavored desserts like <em>mochi and ice cream</em>.</li>
+        <li><em>Soba Noodles</em> – Served hot or cold, these are made from <strong>buckwheat</strong>.</li>
+        <li><strong>Tempura</strong> – Lightly battered and <em>crispy vegetables and seafood</em>.</li>
+    </ul>
 
 </body>
 </html>
